--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 		
 		<!-- Your Content -->
 		<h1>Your Website</h1>
-
+		
+<img src="img/browser.jpg">
 		<!-- Clearfix -->
 		<div class="clear"></div>
 
