--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 		
 		<!-- Your Content -->
 		<h1>Your Website</h1>
-		
-<img src="img/browser.jpg">
+
+<img src="img/browsers.jpg">
 		<!-- Clearfix -->
 		<div class="clear"></div>
 
